# textual-slurm-script-generator

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
textual_slurm_script_generator/: __init__.py  __main__.py  textual_slurm_script_generator.css  textual_slurm_script_generator.py
