[project]
name = "textual-slurm-script-generator"
authors = [{name = "Chang Huan Lo", email= "changhuan.lo@ucl.ac.uk"}]
description = "A Textual-based app for generating SLURM batch scripts"
readme = "README.md"
requires-python = ">=3.8.0"
dynamic = ["version"]

license = {text = "BSD-3-Clause"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]
dependencies = ["textual[dev]"]

[project.urls]
homepage = "https://github.com/lochhh/textual-slurm-script-generator"
bug_tracker = "https://github.com/lochhh/textual-slurm-script-generator/issues"
documentation = "https://github.com/lochhh/textual-slurm-script-generator"
source_code = "https://github.com/lochhh/textual-slurm-script-generator"
user_support = "https://github.com/lochhh/textual-slurm-script-generator/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "tox",
  "black",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["textual_slurm_script_generator*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "--cov=textual_slurm_script_generator"

[tool.black]
target-version = ['py38', 'py39', 'py310']
skip-string-normalization = false
line-length = 79

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  "*.yaml",
  "tox.ini",
  "tests/*",
  "tests/test_unit/*",
  "tests/test_integration/*",
  ".flake8"
]

[tool.ruff]
line-length = 79
exclude = ["__init__.py","build",".eggs"]
select = ["I", "E", "F"]
fix = true

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-*"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
